--- a/J141918.855+394036.03.ipynb
+++ b/J141918.855+394036.03.ipynb
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +353,7 @@
    "metadata": {},
    "source": [
     "Compare to Kamble et al (2014), on VLASS discovery of radio supernovae.\n",
-    "<img src=\"kamble.png\" width=800>"
+    "<img src=\"kamble.png\" width=\"800\">"
    ]
   },
   {
@@ -361,7 +361,7 @@
    "metadata": {},
    "source": [
     "Compare to Metzger et al (2018), on rates and lightcurves or radio transients.\n",
-    "<img src=\"metzger.png\" width=800>"
+    "<img src=\"metzger.png\" width=\"800\">"
    ]
   },
   {
@@ -373,16 +373,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x151cd7f550>"
+       "<matplotlib.legend.Legend at 0x1521ac6780>"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
