adding closing slash to image

--- a/J141918.855+394036.03.ipynb
+++ b/J141918.855+394036.03.ipynb
@@ -353,7 +353,7 @@
    "metadata": {},
    "source": [
     "Compare to Kamble et al (2014), on VLASS discovery of radio supernovae.\n",
-    "<img src=\"kamble.png\" width=\"800\">"
+    "<img src=\"kamble.png\" width=\"800\" />"
    ]
   },
   {
@@ -361,7 +361,7 @@
    "metadata": {},
    "source": [
     "Compare to Metzger et al (2018), on rates and lightcurves or radio transients.\n",
-    "<img src=\"metzger.png\" width=\"800\">"
+    "<img src=\"metzger.png\" width=\"800\" />"
    ]
   },
   {
